--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/light-bootstrap-dashboard.css' %}">
-    <link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Pe-icon-7-stroke.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Animate.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body class="fadeIn animated">
     <div class="wrapper">
-        <div class="sidebar" data-color="grey" data-image="http://@HttpContext.Current.Request.Url.Authority/Images/pexels-photo-122164.jpeg">
+        <div class="sidebar" data-color="grey" data-image="https://static.pexels.com/photos/159397/solar-panel-array-power-sun-electricity-159397.jpeg">
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a class="simple-text">
@@ -22,45 +24,10 @@
                 </div>
 
                 <ul class="nav">
-
-                        <li id="btn-1" onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                            <a data-toggle="collapse" data-target="#warehouseSubmenu" aria-expanded="false">
-                                <i class="pe-7s-box2"></i>
-                                <p>asdas <span translate="WAREHOUSE"></span></p>
-                            </a>
-                            <ul class="nav collapse" id="warehouseSubmenu" role="menu" aria-labelledby="btn-1">
-                                <li onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                                    <a href="">
-                                        <i class="fa fa-truck"></i>
-                                        <p>Create courier</p>
-                                    </a>
-                                </li>
-                                <li onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                                    <a href="">
-                                        <i class="fa fa-truck"></i>
-                                        <p>warehouse list</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                            <a href="">
-                                <i class="fa fa-sliders"></i>
-                                <p><span translate="PARAMETRIZATION"></span></p>
-                            </a>
-                        </li>
-                        <li onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                            <a href="">
-                                <i class="fa fa-users"></i>
-                                <p><span translate="COMPANIESACCOUNTS"></span></p>
-                            </a>
-                        </li>
-
-                    <li onmouseover="animateSideBar(this)" onmouseout="desanimateSideBar(this)">
-                        <a href="">
-                            <i class="pe-7s-note2"></i>
-                            <p>Blog</p>
+                    <li>
+                        <a href="{% url 'chargingSpotsList' %}">
+                            <i class="pe-7s-plug"></i>
+                            <p>Charging spots</p>
                         </a>
                     </li>
                 </ul>
@@ -77,7 +44,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Asencoex</a>
+                        <a class="navbar-brand" href="#">Smart Charging</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left">
@@ -90,8 +57,11 @@
                     </div>
                 </div>
             </nav>
-        </div>
-        {% block content %}{% endblock %}
+            <div class="content">
+                <div class="container-fluid">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
 
 
             <footer class="footer">
