--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -79,7 +79,7 @@
                     </p>
                 </div>
             </footer>
-
+        </div>
     </div>
 
  <script src="{% static 'scripts/jquery-3.1.1.min.js' %}"></script>
@@ -88,5 +88,16 @@
  <script src="{% static 'scripts/bootstrap-notify.js' %}"></script>
  <script src="{% static 'scripts/bootstrap-select.js' %}"></script>
  <script src="{% static 'scripts/light-bootstrap-dashboard.js' %}"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
+        /** PlugType List Modal move!!! **/
+           $('#newPlugTypeBtn').click(function () {
+               $('#createPlugTypeModal').appendTo("body").modal('show');
+           });
+        /** End Plugtype list js**/
+    </script>
 </body>
 </html>
