--- a/SmartCharging/ChargingAppointment/templates/ChargingAppointment/plugType/list.html
+++ b/SmartCharging/ChargingAppointment/templates/ChargingAppointment/plugType/list.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
+{% load bootstrap3 %}
 
 {% block content %}
     <a id="newPlugTypeBtn" class="btn btn-success"><i class="pe-7s-plus"></i> Add</a>
@@ -35,18 +36,16 @@
                 </div>
                 <div class="modal-body">
                     <form action="" method="post">
-                        <div class="container">
-                            <div class="row">
-                               {{form.as_p}}
+                               {% bootstrap_form form %}
                                {% csrf_token %}
-                            </div>
-                        </div>
+                        <button type="submit" class="btn btn-success"><i class="pe-7s-plus"></i> Add</button>
                     </form>
                 </div>
-
+                <!--
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-success"><i class="pe-7s-plus"></i> Add</button>
+
                 </div>
+                -->
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
