--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -52,7 +52,12 @@
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
-
+                            {% if user.is_authenticated %}
+						        <li><a href="#" class="btn btn-simple">Log out</a></li>
+                            {% else %}
+                                <li><a href="#" class="btn btn-simple">Log in</a></li>
+                                <li><a href="#" class="btn btn-simple">Sign up</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
