--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -53,10 +53,11 @@
 
                         <ul class="nav navbar-nav navbar-right">
                             {% if user.is_authenticated %}
-						        <li><a href="#" class="btn btn-simple">Log out</a></li>
+                                <li><a href="#" class="btn btn-simple">Hello! {{ user.get_short_name }}</a></li>
+						        <li><a href="{% url 'logout' %}" class="btn btn-simple">Log out</a></li>
                             {% else %}
-                                <li><a href="#" class="btn btn-simple">Log in</a></li>
-                                <li><a href="#" class="btn btn-simple">Sign up</a></li>
+                                <li><a href="{% url 'login' %}" class="btn btn-simple">Log in</a></li>
+                                <li><a href="/accounts/signup" class="btn btn-simple">Sign up</a></li>
                             {% endif %}
                         </ul>
                     </div>
