--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/Animate.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
 </head>
 <body class="fadeIn animated">
     <div class="wrapper">
@@ -94,11 +95,15 @@
  <script src="{% static 'scripts/bootstrap-notify.js' %}"></script>
  <script src="{% static 'scripts/bootstrap-select.js' %}"></script>
  <script src="{% static 'scripts/light-bootstrap-dashboard.js' %}"></script>
+    <script src="https://unpkg.com/flatpickr"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-
+        $(".flatpickr").flatpickr({});
+        flatpickr(".flatpickr", {
+            enableTime: true
+        });
         /** PlugType List Modal move!!! **/
            $('#newPlugTypeBtn').click(function () {
                $('#createPlugTypeModal').appendTo("body").modal('show');
