--- a/SmartCharging/ChargingAppointment/templates/ChargingAppointment/chargingSpot/list.html
+++ b/SmartCharging/ChargingAppointment/templates/ChargingAppointment/chargingSpot/list.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="item-card__actions item-card--border">
-                    <a href="#"  class="item-button item-button--colored text-uppercase">
+                    <a href="{% url 'detailsChargingStation' pk=chargingSpot.id %}"  class="item-button item-button--colored text-uppercase">
                         View
                     </a>
 
