--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/jQuery.score.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
 
 </head>
