--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="{% static 'css/jQuery.score.css' %}">
     <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="{% static 'css/_materialFullCalendar.css' %}">
+<link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/fullcalendar.print.min.css' %}">
 
 </head>
 <body class="fadeIn animated">
