--- a/SmartCharging/ChargingAppointment/templates/ChargingAppointment/plugType/create.html
+++ b/SmartCharging/ChargingAppointment/templates/ChargingAppointment/plugType/create.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
     <h1>{% if not form.instance.pk %} Create Plug Type{% else %}Edit {{ form.instance.name}}{% endif %}</h1>
@@ -7,7 +8,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        {{form.as_p}}
+                        {% bootstrap_form form %}
                     </div>
                 </div>
                {% csrf_token %}
