--- a/SmartCharging/assets/css/style.css
+++ b/SmartCharging/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
