--- a/SmartCharging/templates/layout.html
+++ b/SmartCharging/templates/layout.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="{% static 'css/_materialFullCalendar.css' %}">
-<link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/fullcalendar.print.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}">
 
 </head>
 <body class="fadeIn animated">
@@ -27,7 +26,7 @@
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a class="simple-text">
-                        <span>hi</span>
+                        <span>Smart Charging</span>
                     </a>
                 </div>
 
