--- a/SmartCharging/templates/registration/password_reset_form.html
+++ b/SmartCharging/templates/registration/password_reset_form.html
@@ -3,12 +3,10 @@
 {% load bootstrap3 %}
 
 {% block content %}
-<div class="container">
     <h1>Forgot your password?</h1>
     <form method="post">
         {% bootstrap_form form %}
         {% csrf_token %}
-        <button type="submit" class="btn btn-success">Send me instruction!</button>
+        <button type="submit" class="btn btn-success"><i class="fa fa-send"></i> Send me instruction!</button>
     </form>
-</div>
 {% endblock %}
