--- a/SmartCharging/accounts/templates/accounts/login.html
+++ b/SmartCharging/accounts/templates/accounts/login.html
@@ -8,6 +8,7 @@
     <form method="post">
         {% bootstrap_form form %}
         {% csrf_token %}
+        <a href="/accounts/password_reset">Dont remember your password?</a>
         <button type="submit" class="btn btn-success">Login</button>
     </form>
 </div>
