--- a/SmartCharging/templates/registration/password_reset_complete.html
+++ b/SmartCharging/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
     <h1>All done!</h1>
-    <p>
-        Your new password has been set! You should set to <a href="{% url 'login' %}">log in</a>
-    </p>
-</div>
+    <div class="row">
+        <div class=" col-md-12">
+            Your new password has been set! You should set to <a href="{% url 'login' %}">log in</a>
+        </div>
+    </div>
 {% endblock %}
