--- a/SmartCharging/accounts/templates/accounts/login.html
+++ b/SmartCharging/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
         {% bootstrap_form form %}
         {% csrf_token %}
         <a href="/accounts/password_reset">Dont remember your password?</a>
-        <button type="submit" class="btn btn-success">Login</button>
+        <button type="submit" class="btn btn-success"><i class="fa fa-user-circle-o"></i> Login</button>
     </form>
 </div>
 {% endblock %}
