--- a/SmartCharging/templates/registration/login.html
+++ b/SmartCharging/templates/registration/login.html
@@ -8,8 +8,8 @@
     <form method="post">
         {% bootstrap_form form %}
         {% csrf_token %}
-            <a href="/accounts/password_reset">Dont remember your password?</a><hr/>
-        <button type="submit" class="btn btn-success"><i class="fa fa-user-circle"></i>Login</button>
+            <a href="/accounts/password_reset">Don't remember your password?</a><hr/>
+        <button type="submit" class="btn btn-success"><i class="fa fa-user-circle"></i> Login</button>
     </form>
 </div>
 {% endblock %}
