--- a/SmartCharging/ChargingAppointment/templates/ChargingAppointment/appointment/calendar.html
+++ b/SmartCharging/ChargingAppointment/templates/ChargingAppointment/appointment/calendar.html
@@ -5,6 +5,8 @@
 
 {% block content %}
     <h1>{{ chargingspot.name }}</h1>
+    <a href="{% url 'createAppointment' %}" type="button" class="btn btn-info"><i class="fa fa-calendar-plus-o"></i> Set an appointment</a>
+    <hr/>
     <div id='calendar'></div>
 
 {% endblock %}
